@@ -27,6 +27,8 @@ Changelog for NICOS 2
 
   - Renamed "server" parameter of CacheClient to "cache".
 
+  - Added "findpeaks()" analyzing command.
+
 **Release 2.1.2**
 
   - Fixed not being able to run another manualscan after stopping a
